--- a/proto/css/style.css
+++ b/proto/css/style.css
@@ -148,7 +148,7 @@ body{
  **/
 #footer{
 
-    background: linear-gradient(100deg, #1c6669, #21a9af);
+    background: linear-gradient(100deg, #337ab7, #9acfea);
     color: white;
     /*color: #337ab7;
     background-color: #F0F8FF;*/
